# findapt

./: .gitignore  README.md  config.conf  findapt.cabal  stack.yaml  test.htm
src/: GetLinks.hs  Main.hs  Telegram.hs
