name:                findapt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/findapt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable findapt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       
                       GetLinks
                       , Telegram
  build-depends:       base >= 4.7 && < 5
                       , telegram-api
                       , http-client-tls
                       , http-client
                       , http-conduit
                       , network-uri
                       , unordered-containers
                       , mtl
                       , text
                       , configurator
                       , tagsoup
                       , aeson
                       , bytestring
